Working On Sign Up Page

--- a/signup.html
+++ b/signup.html
@@ -79,6 +79,86 @@
     <!-- Header Ends Here -->
 
 
+    <!-- Main Contents Starts Here -->
+    <main class="main" id="main">
+        <section class="signup-area">
+            <div class="container">
+                <div class="row signup-box">
+                    <div class="col-lg-12 mb-5">
+                        <h1 class="fs-60 fw-bold text-capitalize text-center mb-5">
+                            Sign Up | SMM Panel in USA | Top Indian Panel
+                        </h1>
+                    </div>
+
+                    <div class="col-lg-12">
+                        <div class="row g-4 g-lg-5">
+                            <div class="col-lg-6">
+                                <div class="signup-banner-img">
+                                    <img src="images/what-smm-service-provide-banner.webp" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="signup-form-area">
+                                    <form action="" class="signup-form text-color">
+                                        <div class="row g-5">
+                                            <div class="col-sm-6">
+                                                <input type="text" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="First Name">
+                                            </div>
+
+                                            <div class="col-sm-6">
+                                                <input type="text" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="Last Name">
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <input type="text" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="Username">
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <input type="text" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="Email">
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <input type="text" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="Skype/WhatsApp/Mobile">
+                                            </div>
+
+                                            <div class="col-sm-6">
+                                                <input type="password" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="Password">
+                                            </div>
+
+                                            <div class="col-sm-6">
+                                                <input type="password" class="form-control fs-4 p-4 rounded-4"
+                                                    placeholder="Confirm Password">
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <button type="submit"
+                                                    class="btn fs-3 fw-bold text-capitalize py-4 rounded-4 bg-yellow color-white w-100">sign
+                                                    up</button>
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <p>
+                                                    Already have an account? <a class="color-yellow fw-bold"
+                                                        href="index.html">Sign in</a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Main Contents Ends Here -->
 
     <!-- Footer Starts Here -->
     <footer class="footer">
