--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header class="header bg-dark-blue" id="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-transparent">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img class="img-fluid" width="200px" src="images/logo.png" alt="Logo">
         </a>
 
@@ -47,13 +47,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item ms-lg-4">
-              <a class="nav-link" aria-current="page" href="#">sign in</a>
+              <a class="nav-link" aria-current="page" href="signin.html">sign in</a>
             </li>
             <li class="nav-item ms-lg-4">
               <a class="nav-link" aria-current="page" href="#">api</a>
             </li>
             <li class="nav-item ms-lg-4">
-              <a class="nav-link" aria-current="page" href="#">sign up</a>
+              <a class="nav-link" aria-current="page" href="signup.html">sign up</a>
             </li>
             <li class="nav-item ms-lg-4">
               <a class="nav-link" aria-current="page" href="#">blog</a>
@@ -84,7 +84,7 @@
     <!-- Home Banner Section Starts Here -->
     <section class="home-banner" id="home-banner">
       <div class="container">
-        <div class="row g-5">
+        <div class="row align-items-center g-5">
           <div class="col-lg-6">
             <div class="home-banner-content">
               <h1 class="fs-60 home-banner-title">
@@ -96,38 +96,9 @@
                 Cheapest SMM Servcie Provider In The Market
               </h2>
 
-              <form class="auth-form" action="">
+              <a href="signin.html" class="signin-btn btn me-3" type="submit">Sign in</a>
+              <a href="signup.html" class="signup-btn btn">Sign up</a>
 
-                <div class="input-group mb-4">
-                  <span class="input-group-text" id="basic-addon1">
-                    <i class="fa-regular fa-user"></i>
-                  </span>
-                  <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-                    aria-describedby="basic-addon1">
-                </div>
-
-                <div class="input-group mb-4">
-                  <span class="input-group-text" id="basic-addon1">
-                    <i class="fa-solid fa-unlock"></i>
-                  </span>
-                  <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-                    aria-describedby="basic-addon1">
-                </div>
-
-                <div class="small d-flex justify-content-between align-content-center mb-4">
-                  <div class="form-check text-nowrap">
-                    <input class="form-check-input" type="checkbox" value="" id="remember_me">
-                    <label class="form-check-label" for="remember_me">
-                      Remember me
-                    </label>
-                  </div>
-
-                  <a class="text-nowrap forgot-pass color-white" href="">Forgot password</a>
-                </div>
-
-                <button class="signin-btn btn me-3" type="submit">Sign in</button>
-                <a href="signup.html" class="signup-btn btn">Sign up</a>
-              </form>
             </div>
           </div>
           <div class="col-lg-6">
