--- a/signin.html
+++ b/signin.html
@@ -87,15 +87,9 @@
                     <div class="col-lg-6">
                         <div class="card color-dark-blue rounded-4 p-5">
 
-                            <h2 class="text-uppercase fw-bold mb-4 color-dark-blue">sign up</h2>
+                            <h2 class="text-uppercase fw-bold mb-4 color-dark-blue">login</h2>
 
-                            <form action="" class="signup-form">
-
-                                <div class="form-group mb-4">
-                                    <label for="" class="label-control fs-4 mb-2">Full Name</label>
-                                    <input type="text" class="form-control fs-4 px-4 py-3 rounded-3 border"
-                                        placeholder="Full Name">
-                                </div>
+                            <form action="" class="signin-form">
 
                                 <div class="form-group mb-4">
                                     <label for="" class="label-control fs-4 mb-2">Email</label>
@@ -109,13 +103,24 @@
                                         placeholder="Password">
                                 </div>
 
-                                <div class="form-group mb-4">
-                                    <button type="submit"
-                                        class="btn fs-4 fw-bold text-capitalize px-4 py-3 rounded-3 bg-yellow color-white w-100">SIGN
-                                        UP</button>
+                                <div class="d-flex justify-content-between mb-5">
+                                    <div class="form-check text-nowrap">
+                                        <input class="form-check-input" type="checkbox" value="" id="remember-me">
+                                        <label class="form-check-label" for="remember-me">
+                                            Remember Me
+                                        </label>
+                                    </div>
+
+                                    <a class="color-dark-blue text-nowrap" href="">Forgot Password?</a>
                                 </div>
+
+                                <button type="submit"
+                                    class="btn fs-4 fw-bold text-capitalize px-4 py-3 rounded-3 bg-yellow color-white w-100 mb-4">LOGIN</button>
+
+
+
                                 <p class="text-center">
-                                    Already a user? <a class="color-dark-blue fw-bold" href="signin.html">LOGIN</a>
+                                    Need an account? <a class="color-dark-blue fw-bold" href="signup.html">SIGN UP</a>
                                 </p>
                             </form>
                         </div>
