--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row align-items-center g-5">
           <div class="col-lg-6">
             <div class="home-banner-content">
-              <h1 class="fs-60 home-banner-title">
+              <h1 class="main-title">
                 smm
                 <br>
                 pak panel
