--- a/contact.html
+++ b/contact.html
@@ -84,152 +84,100 @@
         <!-- FAQ Section Starts Here -->
         <section class="faq-page faq">
             <div class="container">
-                <h1 class="fs-60 fw-bold text-capitalize text-center lh-base mb-5">
-                    Frequently Ask Question
-                </h1>
+                <div class="row">
+                    <div class="col-lg-12 mb-5">
+                        <h1 class="fs-60 fw-bold text-center pb-5 mb-5">
+                            smm panel - UK, US, Canada # 1 Cheapest & Best SMM Panel
+                        </h1>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="row g-5 contact-card bg-blue rounded-5 p-5">
+                            <div class="col-lg-7">
+                                <div class="contact-details">
+                                    <h2 class="fs-40 fw-bold mb-5">
+                                        <span class="color-yellow">Smm Panel Reseller in</span> USA
+                                    </h2>
 
-                <div class="row g-4 g-xl-5">
-
-                    <div class="col-lg-6">
-                        <div class="faq-card">
-                            <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-1"
-                                aria-expanded="false" aria-controls="faq-1">
-                                <h3>
-                                    Is it safe to use an smm panel ?
-                                </h3>
-
-                                <span class="bg-yellow"><i class="fa-solid fa-arrow-down"></i></span>
+                                    <div class="row g-5">
+                                        <div class="col-md-6">
+                                            <div
+                                                class="contact-box h-100 d-flex align-items-center gap-4 p-4 bg-dark-blue rounded-4">
+                                                <div class="cotact-icon">
+                                                    <span
+                                                        class="fs-1 bg-yellow d-flex justify-content-center align-items-center rounded-circle"
+                                                        style="width: 5rem; height: 5rem">
+                                                        <i class="fa-brands fa-skype"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="contact-address">
+                                                    <h2 class="fs-1 fw-bold lh-base">Skype</h2>
+                                                    <p class="lh-base">live:Smmpakpanel</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div
+                                                class="contact-box h-100 d-flex align-items-center gap-4 p-4 bg-dark-blue rounded-4">
+                                                <div class="cotact-icon">
+                                                    <span
+                                                        class="fs-1 bg-yellow d-flex justify-content-center align-items-center rounded-circle"
+                                                        style="width: 5rem; height: 5rem">
+                                                        <i class="fa-solid fa-phone"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="contact-address">
+                                                    <h2 class="fs-1 fw-bold lh-base">Whatsapp</h2>
+                                                    <p class="lh-base"></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div
+                                                class="contact-box h-100 d-flex align-items-center gap-4 p-4 bg-dark-blue rounded-4">
+                                                <div class="cotact-icon">
+                                                    <span
+                                                        class="fs-1 bg-yellow d-flex justify-content-center align-items-center rounded-circle"
+                                                        style="width: 5rem; height: 5rem">
+                                                        <i class="fa-solid fa-envelope"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="contact-address">
+                                                    <h2 class="fs-1 fw-bold lh-base">Email</h2>
+                                                    <p class="lh-base">Smmpakpanel@gmail.com</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div
+                                                class="contact-box h-100 d-flex align-items-center gap-4 p-4 bg-dark-blue rounded-4">
+                                                <div class="cotact-icon">
+                                                    <span
+                                                        class="fs-1 bg-yellow d-flex justify-content-center align-items-center rounded-circle"
+                                                        style="width: 5rem; height: 5rem">
+                                                        <i class="fa-solid fa-location-dot"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="contact-address">
+                                                    <h2 class="fs-1 fw-bold lh-base">Address</h2>
+                                                    <p class="lh-base">
+                                                        Street: Box No. 112542 State/province/area: Dubai Zip code 11254
+                                                        Country Emirates
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-
-                            <div class="collapse lh-base pt-4" id="faq-1">
-                                Choosing the best SMM panel is not that hard. You have to check their customer support
-                                methods, site
-                                security, payment
-                                options, Reliability and types of services. SmmPakPanel.com is the cheapest andeffective
-                                social media
-                                panel that offer
-                                the best-automated services.
+                            <div class="col-lg-5">
+                                <div class="contact-card-img">
+                                    <img class="w-100" src="images/instagram-service-banner-img.webp" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-6">
-                        <div class="faq-card">
-                            <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2"
-                                aria-expanded="false" aria-controls="faq-2">
-                                <h3>
-                                    Which is the cheapest smm panel ?
-                                </h3>
-
-                                <span class="bg-yellow"><i class="fa-solid fa-arrow-down"></i></span>
-                            </div>
-
-                            <div class="collapse lh-base pt-4" id="faq-2">
-                                Choosing the best SMM panel is not that hard. You have to check their customer support
-                                methods, site
-                                security, payment
-                                options, Reliability and types of services. SmmPakPanel.com is the cheapest andeffective
-                                social media
-                                panel that offer
-                                the best-automated services.
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="faq-card">
-                            <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3"
-                                aria-expanded="false" aria-controls="faq-3">
-                                <h3>
-                                    Which is the best smm panel ?
-                                </h3>
-
-                                <span class="bg-yellow"><i class="fa-solid fa-arrow-down"></i></span>
-                            </div>
-
-                            <div class="collapse lh-base pt-4" id="faq-3">
-                                Choosing the best SMM panel is not that hard. You have to check their customer support
-                                methods, site
-                                security, payment
-                                options, Reliability and types of services. SmmPakPanel.com is the cheapest andeffective
-                                social media
-                                panel that offer
-                                the best-automated services.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="faq-card">
-                            <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-4"
-                                aria-expanded="false" aria-controls="faq-4">
-                                <h3>
-                                    How do i choose an smm panel ?
-                                </h3>
-
-                                <span class="bg-yellow"><i class="fa-solid fa-arrow-down"></i></span>
-                            </div>
-
-                            <div class="collapse lh-base pt-4" id="faq-4">
-                                Choosing the best SMM panel is not that hard. You have to check their customer support
-                                methods, site
-                                security, payment
-                                options, Reliability and types of services. SmmPakPanel.com is the cheapest andeffective
-                                social media
-                                panel that offer
-                                the best-automated services.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="faq-card">
-                            <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-5"
-                                aria-expanded="false" aria-controls="faq-5">
-                                <h3>
-                                    what is an smm panel ?
-                                </h3>
-
-                                <span class="bg-yellow"><i class="fa-solid fa-arrow-down"></i></span>
-                            </div>
-
-                            <div class="collapse lh-base pt-4" id="faq-5">
-                                Choosing the best SMM panel is not that hard. You have to check their customer support
-                                methods, site
-                                security, payment
-                                options, Reliability and types of services. SmmPakPanel.com is the cheapest andeffective
-                                social media
-                                panel that offer
-                                the best-automated services.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="faq-card">
-                            <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-6"
-                                aria-expanded="false" aria-controls="faq-6">
-                                <h3>
-                                    How to choose the best smm panel ?
-                                </h3>
-
-                                <span class="bg-yellow"><i class="fa-solid fa-arrow-down"></i></span>
-                            </div>
-
-                            <div class="collapse lh-base pt-4" id="faq-6">
-                                Choosing the best SMM panel is not that hard. You have to check their customer support
-                                methods, site
-                                security, payment
-                                options, Reliability and types of services. SmmPakPanel.com is the cheapest andeffective
-                                social media
-                                panel that offer
-                                the best-automated services.
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
+
         </section>
         <!-- FAQ Section Ends Here -->
     </main>
