Working On SSM-ADMIN

--- a/smm-admin/index.html
+++ b/smm-admin/index.html
@@ -28,7 +28,24 @@
 
 <body>
 
+    <!-- Sidebar Starts Here -->
+    <aside class="sidebar close" id="sidebar">
+        sidebar
+    </aside>
+    <!-- Sidebar Ends Here -->
 
+
+    <!-- Header Starts Here -->
+    <header class="header" id="header">
+        header
+    </header>
+    <!-- Header Ends Here -->
+
+    <!-- Main Content Starts Here -->
+    <main class="main" id="main">
+        main
+    </main>
+    <!-- Main Content Ends Here -->
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
