--- a/smm-admin/index.html
+++ b/smm-admin/index.html
@@ -29,21 +29,223 @@
 <body>
 
     <!-- Sidebar Starts Here -->
-    <aside class="sidebar close" id="sidebar">
-        sidebar
-    </aside>
+    <nav class="sidebar" id="sidebar">
+        <div class="sidebar-header text-center py-4 border-bottom">
+            <a href="index.html">
+                <img class="logo img-fluid" src="images/logo.png" alt="Logo">
+            </a>
+        </div>
+
+        <div class="sidebar-content">
+
+            <div class="menu-group">
+                <h5 class="menu-group-title">main</h5>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="menu-icon">
+                                <i class="fa-solid fa-house-chimney"></i>
+                            </span>
+                            <span class="menu-name">dashboard</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="menu-group">
+                <h5 class="menu-group-title">ui kit</h5>
+                <ul>
+                    <li class="dropdown__menu">
+                        <span class="dropdown__chevron">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </span>
+                        <a data-bs-toggle="collapse" href="#dropdown__side__menu__1" role="button">
+                            <span class="menu-icon">
+                                <i class="fa-brands fa-app-store"></i>
+                            </span>
+                            <span class="menu-name">apps</span>
+                        </a>
+
+                        <div class="submenu collapse" id="dropdown__side__menu__1">
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown__menu">
+                        <span class="dropdown__chevron">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </span>
+                        <a data-bs-toggle="collapse" href="#dropdown__side__menu__2" role="button">
+                            <span class="menu-icon">
+                                <i class="fa-brands fa-codepen"></i>
+                            </span>
+                            <span class="menu-name">Bootstrap</span>
+                        </a>
+
+                        <div class="submenu collapse" id="dropdown__side__menu__2">
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown__menu">
+                        <span class="dropdown__chevron">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </span>
+                        <a data-bs-toggle="collapse" href="#dropdown__side__menu__3" role="button">
+                            <span class="menu-icon">
+                                <i class="fa-regular fa-file-lines"></i>
+                            </span>
+                            <span class="menu-name">landing page</span>
+                        </a>
+
+                        <div class="submenu collapse" id="dropdown__side__menu__3">
+                            <ul>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">cards design</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+
+        </div>
+    </nav>
     <!-- Sidebar Ends Here -->
 
 
     <!-- Header Starts Here -->
-    <header class="header" id="header">
-        header
+    <header class="header p-4" id="header">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-between align-items-center">
+
+                <!-- Header Left Part -->
+                <div class="header-left d-flex align-items-center">
+                    <span class="sidebar-toggler fs-2 brand-color me-5" role="button">
+                        <i class="fa-solid fa-bars-staggered"></i>
+                    </span>
+
+                    <form action="">
+                        <div class="d-none d-lg-block search-box position-relative fs-3 overflow-hidden">
+                            <input class="fs-4 w-100" type="search" name="" id="" placeholder="Search...">
+                            <button type="submit"
+                                class="btn fs-4 position-absolute top-0 end-0 h-100 px-4 pt-3 text-color-2">
+                                <i class="fa-solid fa-magnifying-glass w-100 h-100"></i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+                <!-- Header Right Part -->
+                <div class="header-right">
+                    <div class="d-flex align-items-center">
+                        <span class="fullscreen-btn fs-2 brand-color" role="button">
+                            <i class="fa-solid fa-compress"></i>
+                        </span>
+
+                        <div class="icon-group ms-5">
+                            <a class="text-color-dark brand-color" href="">
+                                <div class="floating-text-icon d-inline-block position-relative fs-2">
+                                    <i class="fa-regular fa-bell"></i>
+                                    <span class="floating-num bg-green fs-6">5</span>
+                                </div>
+                            </a>
+                        </div>
+
+                        <!-- <div class="icon-group ms-5">
+                            <a class="text-color-dark brand-color" href="">
+                                <div class="floating-text-icon d-inline-block position-relative fs-2">
+                                    <i class="fa-regular fa-message"></i>
+                                    <span class="floating-num bg-red fs-6">5</span>
+                                </div>
+                            </a>
+                        </div> -->
+
+                        <div class="user-profile-img ms-5">
+                            <img src="images/user-profile-img.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- Header Ends Here -->
 
     <!-- Main Content Starts Here -->
-    <main class="main" id="main">
-        main
+    <main class="main p-4" id="main">
+        <div class="container-fluid">
+            <h1>Main</h1>
+        </div>
     </main>
     <!-- Main Content Ends Here -->
 
